tests/snapshots/examples_fixtures/basics__records.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
