tests/snapshots/examples_fixtures/basics__safe_arithmetic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/safe_arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
